<resources>
    <string name="app_name">Transaction Monitor</string>
    <string name="message_registration_negative">Registration failed</string>
    <string name="message_login_negative">Wrong PIN entered</string>
    <string name="hint_registration_name">John</string>
    <string name="title_registration_surname">Surame</string>
    <string name="hint_registration_surname">Doe</string>
    <string name="hint_pin">••••</string>
    <string name="hint_account_status">2.523,00 HRK</string>
    <string name="hint_transaction_description">Uplata 1</string>
    <string name="hint_transaction_date">30.10.2016.</string>
    <string name="hint_transaction_amount">1523,33 HRK</string>
    <string name="hint_transaction_type">Type: EXCHANGE</string>
    <string name="hint_login">Login</string>
    <string name="title_registration">Register</string>
    <string name="title_registration_name">Name</string>
    <string name="title_pin_entry">Please enter PIN</string>
    <string name="title_button_register">Register</string>
    <string name="title_register_question">Not yet registered?</string>
    <string name="title_account_status">Status:</string>
    <string name="title_transaction_description">Description:</string>
    <string name="value_unknown_account_status">- HRK</string>
</resources>