<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvDescriptionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:paddingStart="16dp"
        android:text="@string/title_transaction_description"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/tvDescriptionValue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDescriptionValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_transaction_description"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvDescriptionTitle"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/firstTransactionBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="tvDescriptionTitle, tvDescriptionValue" />

    <TextView
        android:id="@+id/tvTransactionDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/hint_transaction_date"
        android:padding="4dp"
        app:layout_constraintEnd_toStartOf="@id/tvTransactionAmount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/firstTransactionBarrier" />

    <TextView
        android:id="@+id/tvTransactionAmount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/hint_transaction_amount"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvTransactionDate"
        app:layout_constraintTop_toBottomOf="@id/firstTransactionBarrier" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/secondTransactionBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="tvTransactionDate, tvTransactionAmount" />

    <TextView
        android:id="@+id/tvTransactionType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/hint_transaction_type"
        android:padding="4dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/secondTransactionBarrier" />

</androidx.constraintlayout.widget.ConstraintLayout>