<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="@dimen/padding_side">

    <ImageView
        android:id="@+id/tvLoginLogo"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/height_logo"
        android:src="@drawable/asseco_see_logo"
        app:layout_constraintBottom_toTopOf="@id/tvTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/title_login"
        android:textSize="@dimen/size_title"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tvPinEntryTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLoginLogo" />

    <TextView
        android:id="@+id/tvPinEntryTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_entry_field_title"
        android:layout_marginTop="32dp"
        android:text="@string/title_pin_entry"
        android:textSize="@dimen/size_title_entry_field"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/etPinEntry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <EditText
        android:id="@+id/etPinEntry"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_entry_field"
        android:layout_marginTop="@dimen/margin_top_entry_field"
        android:background="@drawable/et_background_entry_field"
        android:gravity="center"
        android:hint="@string/hint_pin"
        android:inputType="numberPassword"
        app:layout_constraintBottom_toTopOf="@id/btnNext"
        app:layout_constraintTop_toBottomOf="@id/tvPinEntryTitle" />

    <ImageButton
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/btn_next_selector"
        android:padding="@dimen/padding_button_next"
        android:src="@drawable/ic_baseline_arrow_forward_24"
        app:layout_constraintBottom_toTopOf="@id/tvRegistrationQuestion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPinEntry" />

    <TextView
        android:id="@+id/tvRegistrationQuestion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/title_register_question"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/btnRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_register_selector"
        android:text="@string/title_button_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>